--- a/still.css
+++ b/still.css
@@ -40,7 +40,7 @@ header {
     padding: 20px 0;
 }
 footer {
-    background-color: lightgray;
+    background-color: gray;
     color: white;
     text-align: left;
     padding: 20px 0;
