--- a/still.css
+++ b/still.css
@@ -34,13 +34,13 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: lightcyan;
     color: white;
     text-align: left;
     padding: 20px 0;
 }
 footer {
-    background-color: gray;
+    background-color: lightcyan;
     color: white;
     text-align: left;
     padding: 20px 0;
@@ -84,7 +84,7 @@ p {
 }
 
 .opis-vjezbi {
-    color: pink;
+    color: black;
 }
 
 img {
