--- a/still.css
+++ b/still.css
@@ -41,7 +41,7 @@ header {
 }
 footer {
     background-color: lightcyan;
-    color: white;
+    color: black;
     text-align: left;
     padding: 20px 0;
 }
